Changed pathing for css references.

--- a/HTML/style.css
+++ b/HTML/style.css
@@ -7,7 +7,7 @@
     padding-top: 40%;
     padding-left: 12px;
     text-align: center;
-    background-image: url("Images/table-topdown-1.jpg");
+    background-image: url("../Images/table-topdown-1.jpg");
     background-size: cover;
     width: 100%;
     height: 350px;
